# dyntool

./: .codexignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitecustomize.py
.codex/: library-contract.md  project-context.md
docs/: REFACTOR_BASELINE.md  architecture_rules.md  examples_manifest.toml  examples_overview.md  gen_reference_pages.py  gen_snippets.py  index.md  user_guide.md  workflow_guide.md
examples/: README.md  __init__.py  _bootstrap.py  _legacy_runner.py  _scenario_impls.py
scripts/: _repo_hygiene.py  audit_gui_workflow.py  benchmark_set_sqlite_h5_io.py  capture_gui_screenshot.py  check_codex_assets.py  check_docstring_coverage.py  check_execution_review.py  check_helper_structure.py  check_layer_imports.py  check_mkdocs_site.py  check_public_api_baseline.py  check_repository_governance.py  check_resource_consistency.py  check_text_quality.py  clean_generated_artifacts.py  finish_local_release.py  fix_text_hygiene.py  inspect_storage_repository.py  validate_engineering_project_migration.py
src/: __init__.py
tests/: __init__.py  conftest.py  example_runner.py  gui_real_data_support.py  test_cleanup_guards.py  test_codex_assets.py  test_compute_context.py  test_compute_flow.py  test_compute_pipelines.py  test_docs_links_or_signatures.py  test_documentation_system.py  test_domain_exports.py  test_domain_payloads.py  test_dyntool_web.py  test_dyntool_web_real_data.py  test_engineering_project_migration.py  test_examples_systems.py  test_examples_workflows.py  test_github_governance.py  test_governance_scripts.py  test_gui_audit.py  test_gui_import_workflow.py  test_gui_real_data_integration.py  test_gui_real_modules.py  test_gui_skeleton.py  test_gui_ui_runtime.py  test_gui_workbench_persistence.py  test_infrastructure_payload_roundtrip.py  test_integration.py  test_internal_structure.py  test_io_csv.py  test_io_h5.py  test_limits.py  test_logging_contracts.py  test_model_namespace_io.py  test_object_runtime_ports.py  (+24 more)
(+404 files in other folders)
