[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dyntool"
dynamic = ["version"]
description = "Dynamics computation and vibration evaluation toolkit"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pint>=0.23",
    "pint-xarray>=0.3",
    "xarray>=2024.1",
    "h5netcdf>=1.3",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "pint-pandas>=0.7.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
logging = ["loguru>=0.7"]
plotting = ["matplotlib>=3.7"]
gui = ["PySide6>=6.8"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "pymdown-extensions>=10.15",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyright>=1.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "pymdown-extensions>=10.15",
]

[dependency-groups]
gui = ["PySide6>=6.8"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "pymdown-extensions>=10.15",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyright>=1.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "pymdown-extensions>=10.15",
]

[tool.hatch.build]
packages = ["src/dyntool", "src/dyntool_gui"]

[tool.hatch.version]
path = "src/dyntool/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--assert=plain --ignore-glob=*冲突文件* -p no:cacheprovider"
norecursedirs = [".pytest_cache", "__pycache__", ".uv-cache"]

[tool.ruff]
line-length = 120
cache-dir = ".pytest_tmp/ruff-cache"
